--- a/web/package.json
+++ b/web/package.json
@@ -15,7 +15,8 @@
     "vant": "^2.2.16",
     "view-design": "^4.0.2",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
