--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "js-base64": "^2.5.1",
     "vant": "^2.2.16",
     "view-design": "^4.0.2",
     "vue": "^2.5.2",
