--- a/server/package.json
+++ b/server/package.json
@@ -27,7 +27,8 @@
     "egg-jwt": "^3.1.7",
     "egg-mysql": "^3.0.0",
     "egg-scripts": "^2.6.0",
-    "jsonwebtoken": "^8.5.1"
+    "egg-sequelize": "^5.2.0",
+    "mysql2": "^2.0.2"
   },
   "devDependencies": {
     "@types/mocha": "^2.2.40",
